# hello-agents-java

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pom.xml  prod.env.example  report.md  weather_mcp_server.py
.claude/: settings.local.json
cyber-town/: .env.example
cyber-town/frontend/: project.godot
cyber-town/frontend/scripts/: api_client.gd  api_client.gd.uid  config.gd  config.gd.uid  dialogue_ui.gd  dialogue_ui.gd.uid
cyber-town/memory_data/张三/: 张三.db-shm  张三.db-wal
cyber-town/memory_data/李四/: 李四.db-shm  李四.db-wal
cyber-town/memory_data/王五/: 王五.db-shm  王五.db-wal
frontend/deepresearch/: package-lock.json  vite.config.ts
frontend/src/services/: api.ts
frontend/trip/: .env  .env.example
game-mcp-server/: pom.xml
scripts/: generate_bfcl_v4_groundtruth.py
src/main/java/: .env  Agent.java  AsyncToolExecutor.java  AsyncToolExecutorTest.java  BGEOnnxEmbedding.java  BailianEmbeddingClient.java  CalculatorTool.java  Config.java  DocumentReader.java  EmbedderProvider.java  EntityRelationExtractor.java  EpisodicMemory.java  EpisodicMemoryTest.java  Executor.java  HelloAgentsLLM.java  LLMEmbeddingClient.java  LoadDotenvUtil.java  MarkdownChunker.java  Memory.java  MemoryManager.java  MemoryTool.java  MemoryToolTest.java  Message.java  MyAdvancedSearchTool.java  MyAdvancedSearchToolTest.java  MyCalculatorTool.java  MyCalculatorToolTest.java  MyLLM.java  MyMain.java  MyReActAgent.java  (+33 more)
weather-mcp-server/: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.py  smithery.yaml
(+192 files in other folders)
